[package]
name = "dummy-pin"
version = "1.0.0"
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
repository = "https://github.com/eldruin/dummy-pin-rs"
license = "MIT OR Apache-2.0"
description = "Dummy implementations of the input/output pin embedded-hal traits."
readme = "README.md"
keywords = ["io", "gpio", "dummy", "pin", "hal"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/eldruin/dummy-pin-rs"
documentation = "https://docs.rs/dummy-pin"
edition = "2021"
rust-version = "1.62.0"

[dependencies]
embedded-hal = "1.0.0"

[dev-dependencies]
linux-embedded-hal = "0.4"

[profile.release]
lto = true
